FHR-6205- update to java21